# bible-api

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  collections.json  docker-compose.yml  entrypoint.sh
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: removal-request.yml
.github/workflows/: ci.yml
data/licenses/: licenses.json
data/visualize/: en.json  id.json
migrations/: 001_initial.sql
schema/: license.schema.json  translation.schema.json  visualize.schema.json
scripts/: validate_json.py
src/: error.rs  lib.rs  main.rs
src/api/: health.rs  middleware.rs  mod.rs  search.rs  translations.rs  verses.rs  visualize.rs
src/api/visualize/: cross_references.rs  mod.rs  relationships.rs  timeline.rs  word_frequency.rs
src/config/: env.rs  mod.rs
src/db/: connection.rs  migrations.rs  mod.rs  queries.rs
src/ingestion/: cache.rs  hash_sync.rs  json.rs  mod.rs  visualize.rs
src/models/: book.rs  chapter.rs  mod.rs  translation.rs  verse.rs
tests/: validate_json.rs
