[package]
name = "bible-api"
version = "0.2.0"
edition = "2024"
rust-version = "1.96"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
dotenvy = "0.15"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = [
    "cors",
    "trace",
    "limit",
    "set-header",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = { version = "5", features = ["axum_extras", "uuid"] }
utoipa-gen = { version = "5", features = ["axum_extras"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1
